# TradeStack

./: .env  Cargo.toml  age.json  filtertest.json  input.json  input_aged.json  inputjson_docs.md  nested.json  printing.json  test.json  test_all.json
Julia Fetch data/: Datasource.md  bulk.jl  fill.jl  main.jl  setup.jl
Julia Fetch data/debug_data/: ADT_debug.jls
Python fetch data/: .env  NASDAQ_NVDA, 1D_180c4.csv  add_tickers.py  fetch-stocks.py  fetch_missing_stocks.py  fill.py  insert_holidays_until_2050.py  main.py  nasdaq_closed_days.csv  quality.py  qualitytest.py  test.py  ytest.py
Python fetch data/testdata/: AAPLprices.csv  AMZNprices.csv  GOOGprices.csv  METAprices.csv  MSFTprices.csv  NVDAprices.csv  QQQprices.csv  TSLAprices.csv
docs/: block_system.md  functions.md  questdb.md  update_rust.md
questdb/: hello.txt
questdb/db/: _tab_index.d
questdb/db/sys.telemetry_wal/: _meta
questdb/db/telemetry/: _meta  _txn  _txn_scoreboard
questdb/db/telemetry_config/: _meta  os.k  package.k  version.c  version.k
questdb/public/: index.html  qdb.1be29.js  vendor.2be15.js  vendor.2be15.js.LICENSE.txt
src/: .env  database_functions.rs  database_functions_.rs  json_operations.rs  json_operations_aged.rs  lib.rs  main.rs  main_old.rs  models.rs  models_aged.rs  strategy_executor.rs  strategy_executor_aged.rs  strategy_executor_hybrid.rs  validate_json.rs
src/block/: database_functions.rs  database_functions_.rs  filter.rs  mod.rs
src/market/: database_functions.rs  mod.rs
src/portfolio/: mod.rs
src/portfolio/blocks/: filter.rs
(+10 files in other folders)
