[package]
name = "TradeStack"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "test-util"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
sysinfo = "0.24"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14.1"
psutil = "3.2"